force-app/main/default/objects/Haravan_Order__c/Haravan_Order__c.object-meta.xml
<CustomObject>
    <label>Retail orders</label>
    <nameField>
        <displayFormat>#{000000}</displayFormat>
        <label>Haravan Order Code</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>