force-app/main/default/objects/Haravan_Order__c/fields/Actually_received__c.field-meta.xml
<CustomField>
    <fullName>Actually_received__c</fullName>
    <label>Actually received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>