force-app/main/default/objects/Haravan_Order__c/fields/CashondeliveryCOD__c.field-meta.xml
<CustomField>
    <fullName>CashondeliveryCOD__c</fullName>
    <label>Cash on delivery (COD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>