force-app/main/default/objects/Haravan_Order__c/fields/CLV__c.field-meta.xml
<CustomField>
    <fullName>CLV__c</fullName>
    <formula>Customer__r.Total_Spent_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>