force-app/main/default/objects/Haravan_Order__c/fields/Company_Information__c.field-meta.xml
<CustomField>
    <fullName>Company_Information__c</fullName>
    <label>Company Information</label>
    <type>TextArea</type>
</CustomField>