force-app/main/default/objects/Haravan_Order__c/fields/Conversion_summary__c.field-meta.xml
<CustomField>
    <fullName>Conversion_summary__c</fullName>
    <label>Conversion summary</label>
    <type>Url</type>
</CustomField>