force-app/main/default/objects/Haravan_Order__c/fields/Customer_Note__c.field-meta.xml
<CustomField>
    <fullName>Customer_Note__c</fullName>
    <label>Customer Note</label>
    <type>TextArea</type>
</CustomField>