force-app/main/default/objects/Haravan_Order__c/fields/Discount_for__c.field-meta.xml
<CustomField>
    <fullName>Discount_for__c</fullName>
    <label>DISCOUNT</label>
    <summarizedField>Haravan_Order_item__c.Discount__c</summarizedField>
    <summaryForeignKey>Haravan_Order_item__c.Haravan_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>