force-app/main/default/objects/Haravan_Order__c/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Waiting for deliver</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
                <label>Fulfilled</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>notfulfilled</fullName>
                <label>Notfulfilled</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>success</fullName>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>