force-app/main/default/objects/Haravan_Order__c/fields/FULFILLMENT_STATUS_Haravan__c.field-meta.xml
<CustomField>
    <fullName>FULFILLMENT_STATUS_Haravan__c</fullName>
    <label>FULFILLMENT STATUS in Haravan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>