force-app/main/default/objects/Haravan_Order__c/fields/Haravan_shipment__c.field-meta.xml
<CustomField>
    <fullName>Haravan_shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haravan shipment</label>
    <referenceTo>Haravan_shipment__c</referenceTo>
    <relationshipName>Haravan_Order</relationshipName>
    <type>Lookup</type>
</CustomField>