force-app/main/default/objects/Haravan_Order__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>