force-app/main/default/objects/Haravan_Order__c/fields/Location_for_selling__c.field-meta.xml
<CustomField>
    <fullName>Location_for_selling__c</fullName>
    <label>Location for selling</label>
    <type>Url</type>
</CustomField>