force-app/main/default/objects/Haravan_Order__c/fields/Order_from__c.field-meta.xml
<CustomField>
    <fullName>Order_from__c</fullName>
    <label>Order from</label>
    <length>50</length>
    <type>Text</type>
</CustomField>