force-app/main/default/objects/Haravan_Order__c/fields/Order_has_been_verified__c.field-meta.xml
<CustomField>
    <fullName>Order_has_been_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order has been verified</label>
    <type>Checkbox</type>
</CustomField>