force-app/main/default/objects/Haravan_Order__c/fields/Order_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Status__c</fullName>
    <label>Order Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>self_delivery</fullName>
                <label>Self Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>