force-app/main/default/objects/Haravan_Order__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>Payment method</label>
    <length>200</length>
    <type>Text</type>
</CustomField>