force-app/main/default/objects/Haravan_Order__c/fields/PAYMENT_STATUS_in_Harvan__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_STATUS_in_Harvan__c</fullName>
    <label>PAYMENT STATUS in Harvan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>