force-app/main/default/objects/Haravan_Order__c/fields/Provisional__c.field-meta.xml
<CustomField>
    <fullName>Provisional__c</fullName>
    <label>Provisional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>