force-app/main/default/objects/Haravan_Order__c/fields/QUANTITY_1__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY_1__c</fullName>
    <label>Quantity</label>
    <summarizedField>Haravan_Order_item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Haravan_Order_item__c.Haravan_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>