force-app/main/default/objects/Haravan_Order__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity(notuse)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>