force-app/main/default/objects/Haravan_Order__c/fields/Refunded__c.field-meta.xml
<CustomField>
    <fullName>Refunded__c</fullName>
    <label>Refunded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>