force-app/main/default/objects/Haravan_Order__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>fb</fullName>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>haravan_draft_order</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Zalo</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Lazada</fullName>
            </value>
            <value>
                <fullName>Tiki</fullName>
            </value>
            <value>
                <fullName>fbshop</fullName>
                <label>Facebook Shop</label>
            </value>
            <value>
                <fullName>Harafunnel</fullName>
            </value>
            <value>
                <fullName>app_android</fullName>
                <label>App Android</label>
            </value>
            <value>
                <fullName>app_ios</fullName>
                <label>App IOS</label>
            </value>
            <value>
                <fullName>HaraPOS</fullName>
            </value>
            <value>
                <fullName>Shopee</fullName>
            </value>
            <value>
                <fullName>googleshop</fullName>
                <label>Google Shop</label>
            </value>
            <value>
                <fullName>Harasocial</fullName>
            </value>
            <value>
                <fullName>Sendo</fullName>
            </value>
            <value>
                <fullName>tiktokshop</fullName>
                <label>Tiktok Shop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>