force-app/main/default/objects/Haravan_Order__c/fields/Sales_Channel_notuse__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_notuse__c</fullName>
    <label>Sales channel not use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>