force-app/main/default/objects/Haravan_Order__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>Shipping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>