force-app/main/default/objects/Haravan_Order__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quận 3 - HCM</fullName>
            </value>
            <value>
                <fullName>Quận 1 - HCM</fullName>
            </value>
            <value>
                <fullName>Đống Đa - HN</fullName>
            </value>
            <value>
                <fullName>Long Biên - HN</fullName>
            </value>
            <value>
                <fullName>Hoàn Kiếm - HN</fullName>
            </value>
            <value>
                <fullName>Hưng Yên</fullName>
            </value>
            <value>
                <fullName>Việt Trì</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>