force-app/main/default/objects/Haravan_Order__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Haravan_Order_item__c.Total_Payment__c</summarizedField>
    <summaryForeignKey>Haravan_Order_item__c.Haravan_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>