force-app/main/default/objects/Haravan_Order__c/fields/Subtotal_notuse__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_notuse__c</fullName>
    <label>Subtotal (not use)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>