force-app/main/default/objects/Haravan_Order__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:00 - 11:00</fullName>
            </value>
            <value>
                <fullName>F:VAT</fullName>
            </value>
            <value>
                <fullName>Huyện Bình Chánh</fullName>
            </value>
            <value>
                <fullName>Huyện Củ Chi</fullName>
            </value>
            <value>
                <fullName>Huyện Hóc Môn</fullName>
            </value>
            <value>
                <fullName>Huyện Nhà Bè</fullName>
            </value>
            <value>
                <fullName>Huyện Cần Giờ</fullName>
            </value>
            <value>
                <fullName>Huyện Đan Phương</fullName>
            </value>
            <value>
                <fullName>Huyện Đông Anh</fullName>
            </value>
            <value>
                <fullName>KOC.VN</fullName>
            </value>
            <value>
                <fullName>Lark Base</fullName>
            </value>
            <value>
                <fullName>Quận 11</fullName>
            </value>
            <value>
                <fullName>Quận 12</fullName>
            </value>
            <value>
                <fullName>Quận 3</fullName>
            </value>
            <value>
                <fullName>Thành phố Thủ Đức</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>