force-app/main/default/objects/Haravan_Order__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <label>Total Payment(notuse)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>