force-app/main/default/objects/Haravan_Order__c/fields/TOTAL_PAYMENT_INCLUDE_SHIP__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_PAYMENT_INCLUDE_SHIP__c</fullName>
    <formula>Total_Payment_For__c   +  Shipping__c -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>