force-app/main/default/objects/Haravan_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_date__c</columns>
    <columns>QUANTITY_1__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Discount__c</columns>
    <columns>Shipping__c</columns>
    <columns>TOTAL_PAYMENT_INCLUDE_SHIP__c</columns>
    <columns>Fulfillment_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Store__c</columns>
    <columns>Payment_method__c</columns>
    <columns>Created_Date__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>